--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<title>Robert Crum</title>
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" ref="stylesheet">
-		<link rel="stylesheet" type"text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
 		<div class= "container">
