--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="myTitle">Web Devoloper</div>
 			<div class="links">
 				<div class="link-item">
-					406-431-1811
+				<a href=406-431-1811>406-431-1811</a>
 				<a href=mailto:gargansa@hotmail.com>gargansa@hotmail.com</a>
 				<a href="https://github.com/gargansa"><h3>Github</h3></a>	
 				<a href="https://www.linkedin.com/in/robert-crum-48563b25/"><h3>Linkedin</h3></a>
@@ -37,44 +37,6 @@
 		
 			<div class="sklls">
 					<h2>Skills</h2>
-				</div>
-
-			<div class="facts">
-				<h2>Facts</h2>
-				<b>Pet Dog: T-Rex</b>
-				<p>Our corgi is named T-Rex because he has a big head and little arms.</p>
-				<p>He knows the following tricks/commands in order from least impressive to most</p>
-				<ol>
-					<li>Sit</li>
-					<li>Lay down</li>
-					<li>Let Go</li>
-					<li>Back It Up</li>
-					<li>Stay / Go Get It</li>
-					<li>Shake</li>
-					<li>Sit Pretty (Beg)</li>
-					<li>Roll Over</li>
-					<li>Avada Kedavra (Play Dead)</li>
-				</ol>
-				<b>Accomplishments:</b>
-				<ul>
-					<li>Python Plugin</li>
-					<ul>
-						<li>Created a plugin to modify gcode exported from Cura. To allow mixing gradients for use with mixing nozzle on Promega 3d printer.</li>
-					</ul>
-					<li>Hexwordz Mobile Game</li>
-					<ul>
-						<li>Created a word search game for mobile devices. It was on apple devices for a year(2014). Currently it is still on Android</li>
-					</ul>
-				</ul>
-				
-				<b>Bucket List</b>
-				<ul>
-					<li>Finish Melt</li>
-					<li>Obtain a coding job</li>
-					<li>Create another game</li>
-					<li>Buy a house</li>
-				</ul>
-
 			</div>
 		</div>
 	</body>
