--- a/index.html
+++ b/index.html
@@ -1,44 +1,33 @@
 <html>
 
 	<head>
-
 		<title>Robert Crum</title>
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" ref="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<div class= "container">
-			<div id="myName">Robert Crum</div>
-			<div class="myTitle">Web Devoloper</div>
-			<div class="links">
-				<div class="link-item">
-				<a href=406-431-1811>406-431-1811</a>
-				<a href=mailto:gargansa@hotmail.com>gargansa@hotmail.com</a>
-				<a href="https://github.com/gargansa"><h3>Github</h3></a>	
-				<a href="https://www.linkedin.com/in/robert-crum-48563b25/"><h3>Linkedin</h3></a>
-			</div>
+		<div class="row">
+			<div class="column">
+				<div id="myName">Robert Crum</div>
+				<div class="myTitle">Web Devoloper</div>
+				<div class="links">
+					<a href=406-431-1811>406-431-1811</a>
+					<a href=mailto:gargansa@hotmail.com>gargansa@hotmail.com</a>
+					<a href="https://github.com/gargansa"><h3>Github</h3></a>	
+					<a href="https://www.linkedin.com/in/robert-crum-48563b25/"><h3>Linkedin</h3></a>
+				</div>
 
-			<div class="summary">
-				<h2>Summary</h2>
-			</div>
+				<div class="column">
+					<h2>Summary</h2>
+				</div>
 
-			<div class="qualifications">
-				<h2>Qualifications</h2>
-			
-			</div>
-
-			<div class="experience">
-				<h2>Experience</h2>
-			</div>
-
-			<div class="education">
-				<h2>Education</h2>
-			</div>
-		
-			<div class="sklls">
-					<h2>Skills</h2>
+				<div class="column">
+					<h2>Qualifications</h2>			
+				</div>
 			</div>
 		</div>
 	</body>
 
 </html>
+<div id="comment"></div>
