--- a/index.html
+++ b/index.html
@@ -7,27 +7,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<div class="row">
-			<div class="column">
-				<div id="myName">Robert Crum</div>
-				<div class="myTitle">Web Devoloper</div>
-				<div class="links">
-					<a href=406-431-1811>406-431-1811</a>
-					<a href=mailto:gargansa@hotmail.com>gargansa@hotmail.com</a>
-					<a href="https://github.com/gargansa"><h3>Github</h3></a>	
-					<a href="https://www.linkedin.com/in/robert-crum-48563b25/"><h3>Linkedin</h3></a>
-				</div>
-
-				<div class="column">
-					<h2>Summary</h2>
-				</div>
-
-				<div class="column">
-					<h2>Qualifications</h2>			
-				</div>
-			</div>
-		</div>
+	<div class="wrapper">
+		<div class="header">header</div>
+		<div class="menu">menu</div>
+		<div class="content">content</div>
+		<div class="footer">footer</div>
+	</div>
 	</body>
 
 </html>
-<div id="comment"></div>
+
