--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 	<head>
 		<title>Robert Crum</title>
-		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" ref="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" ref="stylesheet"> -->
 		<link rel="stylesheet" type="text/css" href="style.css"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	</head>
 	<body>
 	<div class="wrapper">
-		<div class="header">header</div>
+		<div class="header">Robert Crum</div>
 		<div class="menu">menu</div>
 		<div class="content">content</div>
 		<div class="footer">footer</div>
