--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
 
   </head>
 
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">52 Elmwood Dr · Bozeman, MT 59718 · (406) 431-1811 ·
             <a href="mailto:gargansa@hotmail.com">gargansa@hotmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">Catch Phrase</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/robertdcrum">
               <i class="fab fa-linkedin-in"></i>
@@ -97,7 +97,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Assistant Manager</h3>
               <div class="subheading mb-3">Batteries Plus Bulbs</div>
-              <p>Description of duties</p>
+              <p>Assisted Customers. Maintained inventory min/max values. Ordered product replenishments and special orders through multiple venders. Developed methods for training new employees.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2009 - December 2018</span>
@@ -106,34 +106,34 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Job2 Title</h3>
-              <div class="subheading mb-3">Job2 Location</div>
-              <p>Job2 Explain abilities</p>
+              <h3 class="mb-0">Associate</h3>
+              <div class="subheading mb-3">Quiznos</div>
+              <p>Assisted Customers in a team environment. Counted inventory and ordered replenishments, Programmed new items into Point of Sale</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">April 2007 - April 2009</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Detail and Service Washer</h3>
+              <div class="subheading mb-3">Helena Motors</div>
+              <p>Cleaned and washed cars. Moved customer vehicles. Maintained a clean workspace. Organized between sales team and detail team. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">May 2006 - August 2006</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">Avon Family Cafe</h3>
+              <div class="subheading mb-3">Head Cook</div>
+              <p>Decided and organized daily soup and special. Taught new employees skills to help the team unite. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">June 2002 - December 2005</span>
             </div>
           </div>
 
@@ -189,7 +189,7 @@
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
+              <i class="fab fa-github"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-react"></i>
@@ -197,20 +197,8 @@
             <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
+              <li class="list-inline-item">
+              <i class="fab fa-python"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
