--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Resume - Robert Crum</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
@@ -150,8 +150,8 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Montana State University</h3>
-              <div class="subheading mb-3">1.5 Years</div>
-              <div>Computer Science</div>
+              <div class="subheading mb-3">Computer Science</div>
+              <div>1.5 Years</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2006 - May 2007</span>
@@ -228,8 +228,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy 3d printing. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>I am a problem solver. 3D printing is one of my more recent hobbies.</p>
         </div>
       </section>
 
@@ -240,31 +239,23 @@
           <h2 class="mb-5">Achievements &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fa fa-gamepad text-warning"></i>
               Created a single player word game called Hexwordz for Google Play</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fa fa-graduation-cap text-warning"></i>
               Montana Code School</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
               Led developement to build a plugin for Cura software, to help Promega and Crane 3D Printers mix different plastics within the nozzle at different rates.</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
+              <i class="fa-li fa fa-graduation-cap text-warning"></i>
               Completed Batteries Plus Device Repair Training in Wisconsin</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
+              <i class="fa-li fa fa-graduation-cap text-warning"></i>
               Completed Batteries Plus Bulb Training in Wisconsin</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              null1</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              null2</li>
+              <i class="fa-li fa fa-quidditch text-warning"></i>
+              Avid Quidditch fan</li>
           </ul>
         </div>
       </section>
@@ -279,7 +270,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="js/resume.js"></script>
 
   </body>
 
