updated achievement icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
 
     <meta charset="utf-8">
@@ -239,22 +238,22 @@
           <h2 class="mb-5">Achievements &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-gamepad text-warning"></i>
+                <i class="fa-li fa fa-graduation-cap text-blue"></i>
+                Montana Code School</li>
+            <li>
+                <i class="fa-li fa fa-graduation-cap text-blue"></i>
+                Completed Batteries Plus Device Repair Training in Wisconsin</li>
+              <li>
+                <i class="fa-li fa fa-graduation-cap text-blue"></i>
+                Completed Batteries Plus Bulb Training in Wisconsin</li>
+            <li>
+              <i class="fa-li fa fa-gamepad text-blue"></i>
               Created a single player word game called Hexwordz for Google Play</li>
             <li>
-              <i class="fa-li fa fa-graduation-cap text-warning"></i>
-              Montana Code School</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fa fa-trophy text-blue"></i>
               Led developement to build a plugin for Cura software, to help Promega and Crane 3D Printers mix different plastics within the nozzle at different rates.</li>
             <li>
-              <i class="fa-li fa fa-graduation-cap text-warning"></i>
-              Completed Batteries Plus Device Repair Training in Wisconsin</li>
-            <li>
-              <i class="fa-li fa fa-graduation-cap text-warning"></i>
-              Completed Batteries Plus Bulb Training in Wisconsin</li>
-            <li>
-              <i class="fa-li fa fa-quidditch text-warning"></i>
+              <i class="fa-li fa fa-quidditch text-blue"></i>
               Avid Quidditch fan</li>
           </ul>
         </div>
