--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="subheading mb-5">52 Elmwood Dr · Bozeman, MT 59718 · (406) 431-1811 ·
             <a href="mailto:gargansa@hotmail.com">gargansa@hotmail.com</a>
           </div>
-          <p class="lead mb-5">Catch Phrase</p>
+          <p class="lead mb-5">Experienced Assistant Manager with a demonstrated history of working in the retail industry. Years of experience in Lighting, Batteries, Device Repair and customer service. Skilled in Programming Languages of Python, and Javascript. Experience with CSS3, HTML5, React, and Adonis. Passionate about 3d Printing technology.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/robertdcrum">
               <i class="fab fa-linkedin-in"></i>
