--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
           <ul>
             <li>Student at Montana Code School, due to graduate in March 2019.</li>
             <li>Previous computer science student at Montana State University.</li>
-            <li>Skilled in the languages of Python Javascript, CSS3, HTML5.</li>
-            <li>Frameworks of React, Adonis, Bootstrap.</li>
+            <li>Adept in the languages of Python, Javascript(including JSX varient), CSS3, HTML5.</li>
+            <li>Proficient in the libraries of React, Adonis.</li>
+            <li>Experienced in frameworks such as Bootstrap, Material Ui</li>
             <li>Developed a post processing plugin for the opensource software known as Cura, to enable mixing nozzles
               to produce a mixing gradient throughout the height of a print.</li>
             <li>Nine years of experience at Batteries Plus Bulbs in device repair, batteries, lighting, management, and
