--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
     <hr class="m-0">
 
+
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
@@ -112,6 +113,7 @@
               <button class="dropbtn">Hexwordz</button>
               <div class="dropdown-content">
                 Created a single player word game called Hexwordz for Google Play
+                <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
               </div>
             </div>
           </li>
@@ -119,19 +121,33 @@
             <div class="dropdown">
               <i class="fa-li fab fa-python text-blue"></i>
               <button class="dropbtn">MELT - Multi-Extruder Layering Tool</button>
+              <p>
+                Led developement to build a python plugin for an opensource software known as Cura. The project enabled 3d printers such as the Promega and Crane made by M3D, mix
+                plastics within the nozzle at varying rates. The results create gradients and other effects through the height of the print.
+              </p>
               <div class="dropdown-content">
-                Led developement to build a plugin for Cura software, to help Promega and Crane 3D Printers mix
-                different
-                plastics within the nozzle at different rates.
+                <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script>
               </div>
             </div>
           </li>
           <li>
             <div class="dropdown">
               <i class="fa-li fab fa-codepen text-blue"></i>
-              <button class="dropbtn">Codepen Projects</button>
+              <button class="dropbtn">Codepen Recursive Tree</button>
+              <p>
+                Created a recursive tree generator. The code works by recursivly calling a createBranch function 2-3 times. Each time reducing the size of the branch which doubles as an exit strategy for the recursive call, and gives the tree the effect of smaller branches towards the tips. The colors are randomly generated initially from a limited range, restraining them from very dark and very light colors. At the end of each branch a leaf is drawn based on a rotated color where rgb values become gbr values, this ensures the leaves stand out.
+              </p>
               <div class="dropdown-content">
-                Text
+                <!--  -->
+                <p class="codepen" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
+                  data-slug-hash="zMOZaK" data-preview="true" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
+                  data-pen-title="#codevember - 09 - Recursive Tree">
+                  <span>See the Pen <a href="https://codepen.io/gargansa/pen/zMOZaK/">
+                      #codevember - 09 - Recursive Tree</a> by Robert Crum (<a href="https://codepen.io/gargansa">@gargansa</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+                </p>
+                <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+                <!--  -->
               </div>
             </div>
           </li>
@@ -140,7 +156,14 @@
               <i class="blender text-blue"></i>
               <button class="dropbtn">Blender Projects</button>
               <div class="dropdown-content">
-                Text
+                <!--  -->
+                <p class="thingiverse" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
+                  data-slug-hash="zMOZaK" data-preview="true" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
+                  data-pen-title="#codevember - 09 - Recursive Tree">
+                  <span>See the Projects <a href="https://www.thingiverse.com/gargansa/about"></a></span>
+                </p>
+                <script async src=""></script>
+                <!--  -->
               </div>
             </div>
           </li>
@@ -148,7 +171,7 @@
         </ul>
       </div>
     </section>
-    
+
     <!-- SKILLS -->
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
