--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <p class="lead mb-5">
           <ul>
-            <li>Student at Montana Code School, due to graduate in March 2019.</li>
+            <li>Student at Montana Code School, expected graduation date March 2019.</li>
             <li>Previous computer science student at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
             <li>Developed a post processing plugin for the opensource software known as Cura, to enable mixing nozzles
