added more embedding

--- a/index.html
+++ b/index.html
@@ -106,66 +106,74 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
+
         <ul class="fa-ul mb-0">
-          <li>
-            <div class="dropdown">
-              <i class="fa-li fab fa-google-play text-blue"></i>
-              <button class="dropbtn">Hexwordz</button>
-              <div class="dropdown-content">
-                Created a single player word game called Hexwordz for Google Play
-                <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
-              </div>
+          <li class="wrapper">
+            <i class="fa-li fab fa-google-play text-blue"></i>
+            <button class="dropbtn">Hexwordz</button>
+            <p>
+              Created a single player word game called Hexwordz. Designed with GameMaker Studio.
+            </p>
+            <div>
+              <img height="200" src="https://lh3.googleusercontent.com/w87PTM7TosD8SZfKhHsSKq7snizwu5KcrnbNUrCeUuYSOZV0E5cVW2teBFAWYURVN4y8=w720-h310-rw"
+                alt="hexwordz game image" />
+              <img height="200" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
+                alt="hexwordz game image 2" />
+            </div>
+            <div>
+              <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
+                  alt='Get it on Google Play' height="70" src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' /></a>
             </div>
           </li>
+
+          <hr class="m-0">
+
           <li>
-            <div class="dropdown">
-              <i class="fa-li fab fa-python text-blue"></i>
-              <button class="dropbtn">MELT - Multi-Extruder Layering Tool</button>
-              <p>
-                Led developement to build a python plugin for an opensource software known as Cura. The project enabled 3d printers such as the Promega and Crane made by M3D, mix
-                plastics within the nozzle at varying rates. The results create gradients and other effects through the height of the print.
-              </p>
-              <div class="dropdown-content">
-                <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script>
-              </div>
-            </div>
+            <i class="fa-li fab fa-python text-blue"></i>
+            <button class="dropbtn">MELT - Multi-Extruder Layering Tool</button>
+            <p>
+              Led developement to build a python plugin for an opensource software known as Cura. The project enabled
+              3d printers such as the Promega and Crane made by M3D, mix
+              plastics within the nozzle at varying rates. The results create gradients and other effects through the
+              height of the print.
+            </p>
+            <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script>
           </li>
+
+          <hr class="m-0">
+
           <li>
-            <div class="dropdown">
-              <i class="fa-li fab fa-codepen text-blue"></i>
-              <button class="dropbtn">Codepen Recursive Tree</button>
-              <p>
-                Created a recursive tree generator. The code works by recursivly calling a createBranch function 2-3 times. Each time reducing the size of the branch which doubles as an exit strategy for the recursive call, and gives the tree the effect of smaller branches towards the tips. The colors are randomly generated initially from a limited range, restraining them from very dark and very light colors. At the end of each branch a leaf is drawn based on a rotated color where rgb values become gbr values, this ensures the leaves stand out.
-              </p>
-              <div class="dropdown-content">
-                <!--  -->
-                <p class="codepen" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
-                  data-slug-hash="zMOZaK" data-preview="true" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
-                  data-pen-title="#codevember - 09 - Recursive Tree">
-                  <span>See the Pen <a href="https://codepen.io/gargansa/pen/zMOZaK/">
-                      #codevember - 09 - Recursive Tree</a> by Robert Crum (<a href="https://codepen.io/gargansa">@gargansa</a>)
-                    on <a href="https://codepen.io">CodePen</a>.</span>
-                </p>
-                <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-                <!--  -->
-              </div>
-            </div>
+            <i class="fa-li fab fa-codepen text-blue"></i>
+            <button class="dropbtn">Codepen Recursive Tree</button>
+            <p>
+              Created a recursive tree generator. The code works by recursivly calling a createBranch function 2-3
+              times. Each time reducing the size of the branch which doubles as an exit strategy for the recursive
+              call, and gives the tree the effect of smaller branches towards the tips. The colors are randomly
+              generated initially from a limited range, restraining them from very dark and very light colors. At the
+              end of each branch a leaf is drawn based on a rotated color where rgb values become gbr values, this
+              ensures the leaves stand out.
+            </p>
+            <!--Codepen Embed-->
+            <p class="codepen" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
+              data-slug-hash="zMOZaK" data-preview="true" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
+              data-pen-title="#codevember - 09 - Recursive Tree">
+              <span>See the Pen <a href="https://codepen.io/gargansa/pen/zMOZaK/">
+                  #codevember - 09 - Recursive Tree</a> by Robert Crum (<a href="https://codepen.io/gargansa">@gargansa</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+            <!--  -->
           </li>
+
+          <hr class="m-0">
+
           <li>
-            <div class="dropdown">
-              <i class="blender text-blue"></i>
-              <button class="dropbtn">Blender Projects</button>
-              <div class="dropdown-content">
-                <!--  -->
-                <p class="thingiverse" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
-                  data-slug-hash="zMOZaK" data-preview="true" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
-                  data-pen-title="#codevember - 09 - Recursive Tree">
-                  <span>See the Projects <a href="https://www.thingiverse.com/gargansa/about"></a></span>
-                </p>
-                <script async src=""></script>
-                <!--  -->
-              </div>
-            </div>
+            <i class="blender text-blue"></i>
+            <button class="dropbtn">Blender Projects</button>
+            <!--Thingiverse Embed-->
+            <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex design i have created yet.</p>
+            <embed src="https://www.thingiverse.com/thing:3347563" width="100%" height="300" overflow="hidden" display="block">
+            <!--  -->
           </li>
 
         </ul>
