--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <li>Student at Montana Code School, expected graduation date March 2019.</li>
             <li>Previous computer science student at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
-            <li>Developed a post processing plugin for the opensource software known as Cura, to enable mixing nozzles
-              to produce a mixing gradient throughout the height of a print.</li>
+            <li>Designed a single player game called Hexwordz that is available on Google Play.</li>
+            <li>Led development with a group of enthusiasts to produce a post processing plugin for the opensource software known as Cura.</li>
             <li>Nine years of experience at Batteries Plus Bulbs in device repair, batteries, lighting, management,
               employee training, and
               customer service. </li>
@@ -116,9 +116,15 @@
             </p>
             <div>
               <img height="200" src="https://lh3.googleusercontent.com/w87PTM7TosD8SZfKhHsSKq7snizwu5KcrnbNUrCeUuYSOZV0E5cVW2teBFAWYURVN4y8=w720-h310-rw"
-                alt="hexwordz game image" />
-              <img height="200" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
+                alt="hexwordz game image 1" />
+                <img height="200" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
                 alt="hexwordz game image 2" />
+                <img height="200" src="https://lh3.googleusercontent.com/WArKqZMYCyhLdkCeMemah2XENGYSFUJIuLdNuPDiK7Pgge6S20hjL3Qx5JpA1VIo5A=w720-h310-rw"
+                alt="hexwordz game image 3" />
+                <img height="200" src="https://lh3.googleusercontent.com/FSPp82Z_UK2mPWrOF1paaWY61b675hLc0BkXrSPE7qUS72NQhBDYwrNx17WDuPelfVCi=w720-h310-rw"
+                alt="hexwordz game image 4" />
+
+                
             </div>
             <div>
               <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
@@ -172,7 +178,7 @@
             <button class="dropbtn">Blender Projects</button>
             <!--Thingiverse Embed-->
             <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex design i have created yet.</p>
-            <embed src="https://www.thingiverse.com/thing:3347563" width="100%" height="300" overflow="hidden" display="block">
+            <embed src="https://www.thingiverse.com/thing:3347563" width="100%" height="300" overflow="hidden" display="block" >
             <!--  -->
           </li>
 
