--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
-
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -78,11 +77,10 @@
             <li>Previous computer science student at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
             <li>Designed a single player game called Hexwordz that is available on Google Play.</li>
-            <li>Led development with a group of enthusiasts to produce a post processing plugin for the opensource software known as Cura.</li>
+            <li>Led development with a group of enthusiasts to produce a post processing plugin for the opensource
+              software known as Cura.</li>
             <li>Nine years of experience at Batteries Plus Bulbs in device repair, batteries, lighting, management,
-              employee training, and
-              customer service. </li>
-
+              employee training, and customer service. </li>
           </ul>
         </p>
 
@@ -102,7 +100,6 @@
 
     <hr class="m-0">
 
-
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
@@ -117,14 +114,13 @@
             <div>
               <img height="200" src="https://lh3.googleusercontent.com/w87PTM7TosD8SZfKhHsSKq7snizwu5KcrnbNUrCeUuYSOZV0E5cVW2teBFAWYURVN4y8=w720-h310-rw"
                 alt="hexwordz game image 1" />
-                <img height="200" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
+              <img height="200" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
                 alt="hexwordz game image 2" />
-                <img height="200" src="https://lh3.googleusercontent.com/WArKqZMYCyhLdkCeMemah2XENGYSFUJIuLdNuPDiK7Pgge6S20hjL3Qx5JpA1VIo5A=w720-h310-rw"
+              <img height="200" src="https://lh3.googleusercontent.com/WArKqZMYCyhLdkCeMemah2XENGYSFUJIuLdNuPDiK7Pgge6S20hjL3Qx5JpA1VIo5A=w720-h310-rw"
                 alt="hexwordz game image 3" />
-                <img height="200" src="https://lh3.googleusercontent.com/FSPp82Z_UK2mPWrOF1paaWY61b675hLc0BkXrSPE7qUS72NQhBDYwrNx17WDuPelfVCi=w720-h310-rw"
+              <img height="200" src="https://lh3.googleusercontent.com/FSPp82Z_UK2mPWrOF1paaWY61b675hLc0BkXrSPE7qUS72NQhBDYwrNx17WDuPelfVCi=w720-h310-rw"
                 alt="hexwordz game image 4" />
 
-                
             </div>
             <div>
               <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
@@ -143,6 +139,8 @@
               plastics within the nozzle at varying rates. The results create gradients and other effects through the
               height of the print.
             </p>
+            <blockquote class="imgur-embed-pub" lang="en" data-id="a/DA9S09g"><a href="//imgur.com/DA9S09g">MELT Prints</a></blockquote>
+            <script async  height="300" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
             <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script>
           </li>
 
@@ -177,8 +175,9 @@
             <i class="blender text-blue"></i>
             <button class="dropbtn">Blender Projects</button>
             <!--Thingiverse Embed-->
-            <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex design i have created yet.</p>
-            <embed src="https://www.thingiverse.com/thing:3347563" width="100%" height="300" overflow="hidden" display="block" >
+            <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex
+              design i have created yet.</p>
+            <embed src="https://www.thingiverse.com/thing:3347563" width="100%" height="300" overflow="hidden" display="block">
             <!--  -->
           </li>
 
