--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </p>
             <blockquote class="imgur-embed-pub" lang="en" data-id="a/DA9S09g"><a href="//imgur.com/DA9S09g">MELT Prints</a></blockquote>
             <script async  height="300" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-            <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script>
+            <!-- <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script> -->
           </li>
 
           <hr class="m-0">
