--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
               plastics within the nozzle at varying rates. The results create gradients and other effects through the
               height of the print.
             </p>
+            <p>
+              Code can be found on my <a href="https://github.com/gargansa/MELT">github <i class="fab fa-github"></i></a>
+            </p>
             <blockquote class="imgur-embed-pub" lang="en" data-id="a/DA9S09g"><a href="//imgur.com/DA9S09g">MELT Prints</a></blockquote>
-            <script async  height="300" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+            <script async height="300" src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
             <!-- <script src="https://gist.github.com/gargansa/46b1481cfe2b39c7243326e6b8fd11e2.js"></script> -->
           </li>
 
@@ -177,7 +180,14 @@
             <!--Thingiverse Embed-->
             <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex
               design i have created yet.</p>
-            <embed src="https://www.thingiverse.com/thing:3347563" width="100%" height="300" overflow="hidden" display="block">
+            <div position="relative" style="max-width:500px; border:1px solid red">
+              <div position="absolute" style="max-width:50%; overflow:hidden; float:left; border:1px solid blue">
+                <img src="https://cdn.thingiverse.com/renders/ef/17/25/7b/78/392e47046799ac00e8425d384d21c3e8_preview_featured.jpg">
+              </div>
+              <div position="absolute" style="max-width:50%; overflow:hidden; float:left; border:1px solid blue">
+                <img src="https://cdn.thingiverse.com/renders/ef/17/25/7b/78/392e47046799ac00e8425d384d21c3e8_preview_featured.jpg">
+              </div>
+            </div>
             <!--  -->
           </li>
 
